Repository form schemas readable from jar