@@ -104,6 +104,11 @@ tasks.named('test') {
     finalizedBy jacocoTestReport
 }
 
+task bootRun(type: JavaExec) {
+    mainClass = 'edu.upc.essi.dtim.odin.OdinApplication' // Replace with your main class
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+}
 bootJar  {
     manifest {
         attributes (
